# daemonic

./: .gitignore  Makefile.am  Makefile.in  README.md  alternative.c  alternative.h  config.h.in  configure  configure.ac  daemonic.c  execpath.c  sampledaemon.c  stop.sh  verify.h
